--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>What You Do</h2>
         </section>
 
-        l<!-- "meet the trainers" section -->
+        <!-- "meet the trainers" section -->
         <section>
             <h2>Meet The Trainers</h2>
         </section>
