--- a/index.html
+++ b/index.html
@@ -149,6 +149,30 @@
         <!-- "reach out" section -->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52977.858855729304!2d-118.08345920976241!3d33.91240935681616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s55%20main%20street%2C%20some%20town%2C%20california!5e0!3m2!1sen!2sus!4v1637781866424!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br />
+                        Some Town, Ca <br />
+                        12345<br />
+                        P: 55.RUN.BUDZ (555.786.2893)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
         </section>
 
         <!-- footer -->
