--- a/index.html
+++ b/index.html
@@ -158,11 +158,25 @@
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
+                <!-- map -->
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52977.858855729304!2d-118.08345920976241!3d33.91240935681616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s55%20main%20street%2C%20some%20town%2C%20california!5e0!3m2!1sen!2sus!4v1637781866424!5m2!1sen!2sus" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy">
                 </iframe>
+                <!-- contact form -->
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name" />
+
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
